--- a/SpanishWords.Web/Views/Stats/Index.cshtml
+++ b/SpanishWords.Web/Views/Stats/Index.cshtml
@@ -1,41 +1,13 @@
 ﻿@model StatsViewModel
 
 <h1>Statistics</h1>
+<br /> <br />
 
 @{
-
-    <table class="table">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">English</th>
-                <th scope="col">Spanish</th>
-                <th scope="col">Date added</th>
-                <th scope="col">Date learned</th>
-                <th scope="col">Time needed to learn</th>
-              
-               
-
-            </tr>
-        </thead>
-        <tbody>
-
-            @{
-                for (int i = 0; i < Model.Words.Count(); i++)
-                {
-                    <tr>
-                        <th scope="row">@(i + 1)</th>
-                        <td><p>@Model.Words[i].English</p></td>
-                        <td>@Model.Words.ElementAt(i).Spanish</td>
-                       
-                    </tr>
-                }
-
-                
-               
-            }
-        </tbody>
-    </table>
-
-
+    <h3>Total words: @Model.TotalWords</h3>
+    <h3 class="text-success">Learnt words: @Model.LearntWords</h3>
+    <h3 class="text-danger">Not learnt words: @Model.NotLearntWords</h3>
+    <h3>Harderst word to learn: @Model.HardestWordToLearn.English</h3>
+    <h3>Average time to learn a word: @Model.AverageTimeForLearningPerWord</h3>
+    <h3>Average questions per word ratio: @Model.AverageQuestionCountPerWord</h3>
 }
