JavaScript fixed document reload.

--- a/SpanishWords.Web/Views/Word/Index.cshtml
+++ b/SpanishWords.Web/Views/Word/Index.cshtml
@@ -104,7 +104,7 @@
                                             },
                                             success: function (res) {
                                                 console.log('Deleted one word.');
-                                                document.reload(); //KLAUDIA please help -> ajax nie odświeża strony
+                                                location.reload();
                                             }
                                         });
                                     }
@@ -126,7 +126,7 @@
                                             },
                                             success: function (res) {
                                                 console.log('Progress for one word resetted.');
-                                                document.reload(); //KLAUDIA please help -> ajax nie odświeża strony
+                                                location.reload();
                                             }
                                         });
                                     }
